crates/pcb-layout/tests/snapshots/layout_generation__not_connected_single_pin_multi_pad.layout.json.snap
---
source: crates/pcb-layout/tests/layout_generation.rs
expression: content
---
{
  "footprints": [
    {
      "dnp": false,
      "exclude_from_bom": false,
      "exclude_from_pos_files": false,
      "footprint": "workspace_Package_DFN_QFN:QFN-16-1EP_3x3mm_P0.5mm_EP1.7x1.7mm_ThermalVias",
      "graphical_items": [],
      "group": null,
      "layer": "F.Cu",
      "locked": false,
      "orientation": 0.0,
      "pads": [
        {
          "layer": "F.Cu",
          "name": "17",
          "position": {
            "x": 148112500,
            "y": 105475000
          }
        },
        {
          "layer": "F.Cu",
          "name": "5",
          "position": {
            "x": 149612500,
            "y": 103975000
          }
        }
      ],
      "position": {
        "x": 148112500,
        "y": 105475000
      },
      "reference": "U1",
      "uuid": "bb9170a7-68d4-539c-bed9-f036cbc8d7db",
      "value": "Symbol"
    }
  ],
  "groups": [],
  "tracks": [],
  "vias": [],
  "zones": []
}
