crates/pcb-layout/tests/snapshots/layout_generation__not_connected_single_pin_multi_pad.log.snap
---
source: crates/pcb-layout/tests/layout_generation.rs
expression: content
---
INFO: Creating new board file at <TEMP_DIR>
INFO: Parsing JSON netlist from <TEMP_DIR>
INFO: --------------------------------------------------------------------------------
INFO: Running step: ImportNetlist
INFO: --------------------------------------------------------------------------------
INFO: Starting ImportNetlist...
INFO: Running lens-based netlist sync
INFO: Starting lens-based layout sync
INFO: Source: 1 footprints, 0 groups, 2 nets
INFO: Changes: +1 -0 footprints
INFO: NEW FPV path=U1 ref=U1 value=Symbol fpid=workspace_Package_DFN_QFN:QFN-16-1EP_3x3mm_P0.5mm_EP1.7x1.7mm_ThermalVias bom=false fields=["Prefix=U"]
INFO: NEW FPC path=U1 x=0 y=0 orient=0.0 layer=F.Cu
INFO: CHANGESET FP_ADD path=U1 ref=U1 fpid=workspace_Package_DFN_QFN:QFN-16-1EP_3x3mm_P0.5mm_EP1.7x1.7mm_ThermalVias value=Symbol x=0 y=0 layer=F.Cu
INFO: Added footprint: U1
INFO: HierPlace: placed 1 items
INFO: OPLOG FP_ADD path=U1 ref=U1 fpid=workspace_Package_DFN_QFN:QFN-16-1EP_3x3mm_P0.5mm_EP1.7x1.7mm_ThermalVias value=Symbol x=0 y=0 layer=F.Cu pads=2
INFO: OPLOG NET_ADD name=unconnected-(U1:5)
INFO: OPLOG NET_ADD name=unconnected-(U1:17)
INFO: OPLOG PLACE_FP path=U1 x=147262500 y=103675000 w=2475000 h=2650000
INFO: Sync completed in X.XXXs
INFO: Lens sync complete: +1 -0 footprints
INFO: Completed ImportNetlist in X.XXX seconds
INFO: --------------------------------------------------------------------------------
INFO: Running step: FinalizeBoard
INFO: --------------------------------------------------------------------------------
INFO: Starting FinalizeBoard...
INFO: Saved layout snapshot to <TEMP_DIR>
INFO: Snapshot export took X.XXX seconds
INFO: Board saving took X.XXX seconds
INFO: Completed FinalizeBoard in X.XXX seconds
